--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "muzdima.mymoney" //muzdima.boringmoney
+        applicationId "muzdima.mymoney"
         minSdk 28
         targetSdk 31
         versionCode 1
