--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,24 +16,24 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BoringMoney">
+        android:theme="@style/Theme.MyMoney">
         <activity
             android:name=".activity.ImportExportActivity"
             android:exported="true" />
         <activity
-            android:name=".activity.DictionariesActivity"
+            android:name=".activity.dictionary.DictionariesActivity"
             android:exported="true" />
         <activity
-            android:name=".activity.AccountGroupsDictionaryActivity"
+            android:name=".activity.dictionary.dictionaries.AccountGroupsDictionaryActivity"
             android:exported="true" />
         <activity
-            android:name=".activity.AccountsDictionaryActivity"
+            android:name=".activity.dictionary.dictionaries.AccountsDictionaryActivity"
             android:exported="true" />
         <activity
-            android:name=".activity.CategoriesDictionaryActivity"
+            android:name=".activity.dictionary.dictionaries.CategoriesDictionaryActivity"
             android:exported="true" />
         <activity
-            android:name=".activity.CurrenciesDictionaryActivity"
+            android:name=".activity.dictionary.dictionaries.CurrenciesDictionaryActivity"
             android:exported="true" />
         <activity
             android:name=".activity.DraftActivity"
@@ -42,22 +42,25 @@
             android:name=".activity.ActionsActivity"
             android:exported="true" />
         <activity
-            android:name=".activity.CurrencyCardActivity"
+            android:name=".activity.dictionary.cards.CurrencyCardActivity"
             android:exported="true" />
         <activity
-            android:name=".activity.AccountCardActivity"
+            android:name=".activity.dictionary.cards.AccountCardActivity"
             android:exported="true" />
         <activity
-            android:name=".activity.CategoryCardActivity"
+            android:name=".activity.dictionary.cards.CategoryCardActivity"
             android:exported="true" />
         <activity
-            android:name=".activity.AccountGroupCardActivity"
+            android:name=".activity.dictionary.cards.AccountGroupCardActivity"
             android:exported="true" />
         <activity
             android:name=".activity.StatisticsActivity"
             android:exported="true" />
         <activity
             android:name=".activity.StatisticsMonthlyActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activity.SettingsActivity"
             android:exported="true" />
         <activity
             android:name=".activity.MainActivity"
